# WKuWKu

./: .gitattributes  .gitignore  .gitmodules  Changelog  README.md  README.zh_CN.md  build.gradle  common.cmake  config.gradle  gradle.properties  settings.gradle  version_tags.xml
.github/workflows/: build.yml  release.yml
Scripts/: build  build.bat  build_all.bat
app/: build.gradle  proguard-rules.pro
app/schemas/ink.snowland.wkuwku.db.AppDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
common/: AudioOutputStream.cpp  GLUtils.cpp  build.gradle  consumer-rules.pro
common/include/: ink_snowland_wkuwku_EmulatorV2.h
emulator/: build.gradle
emulator/src/main/cpp/: AudioOutputStream.cpp  CMakeLists.txt  GLRenderer.cpp  ink_snowland_wkuwku_EmulatorV2.cpp  ink_snowland_wkuwku_EmulatorV2.cpp~  ink_snowland_wkuwku_libretro_bridge.cpp
emulator/src/main/cpp/include/: AudioOutputStream.h  Buffer.h  GLRenderer.h  Log.h  Utils.h  ink_snowland_wkuwku_EmulatorV2.h
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plug/: build.gradle
plug-beetlesaturn/: build.gradle
plug-beetlesaturn/src/main/: AndroidManifest.xml
plug-beetlesaturn/src/main/cpp/: CMakeLists.txt
plug-bsnes/: build.gradle
plug-bsnes/src/main/: AndroidManifest.xml
plug-bsnes/src/main/cpp/: CMakeLists.txt
plug-citra/: build.gradle
plug-citra/src/main/: AndroidManifest.xml
plug-citra/src/main/cpp/: CMakeLists.txt
plug-desmume/: build.gradle
plug-desmume/src/main/: AndroidManifest.xml
plug-desmume/src/main/cpp/: CMakeLists.txt  desmume.cpp
plug-dolphin/: .gitignore  build.gradle
plug-dolphin/src/main/: AndroidManifest.xml
plug-dolphin/src/main/cpp/: CMakeLists.txt
plug-fbneo/: build.gradle
plug-fbneo/src/main/: AndroidManifest.xml
plug-fbneo/src/main/cpp/: CMakeLists.txt
plug-fmsx/: build.gradle
plug-fmsx/src/main/: AndroidManifest.xml
plug-fmsx/src/main/cpp/: CMakeLists.txt
plug-geargrafx/: build.gradle
plug-geargrafx/src/main/: AndroidManifest.xml
plug-geargrafx/src/main/cpp/: CMakeLists.txt
plug-genesisplusgx/: build.gradle
plug-genesisplusgx/src/main/: AndroidManifest.xml
plug-genesisplusgx/src/main/cpp/: CMakeLists.txt  genesisplusgx.cpp
plug-mame/: build.gradle
plug-mame/src/main/: AndroidManifest.xml
plug-mame/src/main/cpp/: CMakeLists.txt  mame.cpp
plug-mame2003plus/: build.gradle
plug-mame2003plus/src/main/: AndroidManifest.xml
plug-mame2003plus/src/main/cpp/: CMakeLists.txt  mame.cpp
plug-melonds/: build.gradle
plug-melonds/src/main/: AndroidManifest.xml
plug-melonds/src/main/cpp/: CMakeLists.txt
plug-mesen/: build.gradle
plug-mesen/src/main/: AndroidManifest.xml
plug-mesen/src/main/cpp/: CMakeLists.txt  ink_snowland_wkuwku_libretro_bridge.cpp
plug-mgba/: build.gradle
plug-mgba/src/main/: AndroidManifest.xml
plug-mgba/src/main/cpp/: CMakeLists.txt
plug-mupen64plusnext/: build.gradle
plug-mupen64plusnext/src/main/: AndroidManifest.xml
plug-mupen64plusnext/src/main/cpp/: CMakeLists.txt
plug-pcsx/: build.gradle
plug-pcsx/src/main/: AndroidManifest.xml
plug-pcsx/src/main/cpp/: CMakeLists.txt  pcsx.cpp
plug-pokemini/: build.gradle
plug-pokemini/src/main/: AndroidManifest.xml
plug-pokemini/src/main/cpp/: CMakeLists.txt
plug-prosystem/: build.gradle
plug-prosystem/src/main/: AndroidManifest.xml
plug-prosystem/src/main/cpp/: CMakeLists.txt
plug-ruffle/: build.gradle
plug-ruffle/src/main/: AndroidManifest.xml
plug-sameboy/: build.gradle
plug-sameboy/src/main/: AndroidManifest.xml
plug-sameboy/src/main/cpp/: CMakeLists.txt
plug-snes9x/: build.gradle
plug-snes9x/src/main/: AndroidManifest.xml
plug-snes9x/src/main/cpp/: CMakeLists.txt
plug-swanstation/: build.gradle
plug-swanstation/src/main/: AndroidManifest.xml
plug-theme/: build.gradle
plug-theme/src/main/: AndroidManifest.xml
plug-vbam/: build.gradle
plug-vbam/src/main/: AndroidManifest.xml
plug-vbanext/: build.gradle
plug-vbanext/src/main/: AndroidManifest.xml
plug-yabasanshiro/: build.gradle
plug-yabasanshiro/src/main/: AndroidManifest.xml
plug-yabause/: build.gradle
plug-yabause/src/main/: AndroidManifest.xml
retroconsole/: build.gradle
shared/: AudioOutputStream.cpp  GLContext.cpp  GLRenderer.cpp  GLUtils.cpp  Util.cpp  Utils.cpp  VkContext.cpp  VkRenderer.cpp  ink_snowland_wkuwku_EmulatorV2.cpp  shared.cmake
shared/include/: Buffer.h  GLContext.h  GLRenderer.h  GLUtils.h  Log.h  Renderer.h  Util.h  Utils.h  VkContext.h  VkRenderer.h  ink_snowland_wkuwku_EmulatorV2.h  vk_shaders_spv.h
shared/include/glsl/: fs_simple_texture.h  vs_simple_texture.h
shared/shaders/: simple_texture.frag  simple_texture.vert
templates/: copy_to_root.gradle  emulator.gradle
wkuwku/: build.gradle
(+513 files in other folders)
